; ModuleID = '/home/carl/AnghaBench/mimikatz/mimikatz/modules/extr_kuhl_m_iis.c_kuhl_m_iis_apphost.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimikatz/modules/extr_kuhl_m_iis.c_kuhl_m_iis_apphost.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i32] [i32 105, i32 110, i32 0], align 4
@.str.1 = private unnamed_addr constant [60 x i32] [i32 47, i32 47, i32 99, i32 111, i32 110, i32 102, i32 105, i32 103, i32 117, i32 114, i32 97, i32 116, i32 105, i32 111, i32 110, i32 47, i32 115, i32 121, i32 115, i32 116, i32 101, i32 109, i32 46, i32 97, i32 112, i32 112, i32 108, i32 105, i32 99, i32 97, i32 116, i32 105, i32 111, i32 110, i32 72, i32 111, i32 115, i32 116, i32 47, i32 97, i32 112, i32 112, i32 108, i32 105, i32 99, i32 97, i32 116, i32 105, i32 111, i32 110, i32 80, i32 111, i32 111, i32 108, i32 115, i32 47, i32 97, i32 100, i32 100, i32 0], align 4
@IISXMLType_ApplicationPools = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [50 x i32] [i32 47, i32 47, i32 99, i32 111, i32 110, i32 102, i32 105, i32 103, i32 117, i32 114, i32 97, i32 116, i32 105, i32 111, i32 110, i32 47, i32 115, i32 121, i32 115, i32 116, i32 101, i32 109, i32 46, i32 97, i32 112, i32 112, i32 108, i32 105, i32 99, i32 97, i32 116, i32 105, i32 111, i32 110, i32 72, i32 111, i32 115, i32 116, i32 47, i32 115, i32 105, i32 116, i32 101, i32 115, i32 47, i32 115, i32 105, i32 116, i32 101, i32 0], align 4
@IISXMLType_Sites = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [47 x i32] [i32 77, i32 105, i32 115, i32 115, i32 105, i32 110, i32 103, i32 32, i32 47, i32 105, i32 110, i32 58, i32 102, i32 105, i32 108, i32 101, i32 110, i32 97, i32 109, i32 101, i32 32, i32 40, i32 97, i32 112, i32 112, i32 108, i32 105, i32 99, i32 97, i32 116, i32 105, i32 111, i32 110, i32 72, i32 111, i32 115, i32 116, i32 46, i32 99, i32 111, i32 110, i32 102, i32 105, i32 103, i32 41, i32 10, i32 0], align 4
@STATUS_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kuhl_m_iis_apphost(i32 %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32** %1, i32*** %4, align 8
  %7 = load i32, i32* %3, align 4
  %8 = load i32**, i32*** %4, align 8
  %9 = call i64 @kull_m_string_args_byName(i32 %7, i32** %8, i8* bitcast ([3 x i32]* @.str to i8*), i32* %5, i32* null)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %34

11:                                               ; preds = %2
  %12 = call i32* (...) @kull_m_xml_CreateAndInitDOM()
  store i32* %12, i32** %6, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %33

14:                                               ; preds = %11
  %15 = load i32*, i32** %6, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call i64 @kull_m_xml_LoadXMLFile(i32* %15, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %30

19:                                               ; preds = %14
  %20 = load i32, i32* %3, align 4
  %21 = load i32**, i32*** %4, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* @IISXMLType_ApplicationPools, align 4
  %24 = call i32 @kuhl_m_iis_apphost_genericEnumNodes(i32 %20, i32** %21, i32* %22, i8* bitcast ([60 x i32]* @.str.1 to i8*), i32 %23, i32* null, i32* null, i32 0)
  %25 = load i32, i32* %3, align 4
  %26 = load i32**, i32*** %4, align 8
  %27 = load i32*, i32** %6, align 8
  %28 = load i32, i32* @IISXMLType_Sites, align 4
  %29 = call i32 @kuhl_m_iis_apphost_genericEnumNodes(i32 %25, i32** %26, i32* %27, i8* bitcast ([50 x i32]* @.str.2 to i8*), i32 %28, i32* null, i32* null, i32 0)
  br label %30

30:                                               ; preds = %19, %14
  %31 = load i32*, i32** %6, align 8
  %32 = call i32 @kull_m_xml_ReleaseDom(i32* %31)
  br label %33

33:                                               ; preds = %30, %11
  br label %36

34:                                               ; preds = %2
  %35 = call i32 @PRINT_ERROR(i8* bitcast ([47 x i32]* @.str.3 to i8*))
  br label %36

36:                                               ; preds = %34, %33
  %37 = load i32, i32* @STATUS_SUCCESS, align 4
  ret i32 %37
}

declare dso_local i64 @kull_m_string_args_byName(i32, i32**, i8*, i32*, i32*) #1

declare dso_local i32* @kull_m_xml_CreateAndInitDOM(...) #1

declare dso_local i64 @kull_m_xml_LoadXMLFile(i32*, i32) #1

declare dso_local i32 @kuhl_m_iis_apphost_genericEnumNodes(i32, i32**, i32*, i8*, i32, i32*, i32*, i32) #1

declare dso_local i32 @kull_m_xml_ReleaseDom(i32*) #1

declare dso_local i32 @PRINT_ERROR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
